# DwarfMachine

./: .gitmodules  CMakeLists.txt
cmake/: FindSDL2.cmake
include/component/: camera.h  component.h  component_manager.h  component_mask.h  component_type.h  control_type.h  debug_info.h  drawable.h  light.h  material.h  material_default.h  mesh.h  mesh_renderer.h  model.h  transform.h
include/component/lights/: directional_light.h  light.h  point_light.h  spot_light.h
include/component/materials/: material.h  material_default.h  material_metal_roughness.h  material_skybox.h  material_terrain.h
include/component/shadows/: shadow_box.h  shadow_renderer.h
include/editor/: editor.h  editor_renderer.h  imgui.h  log.h  renderer_imgui.h
include/engine/: Input.h  color.h  component.h  component_manager.h  component_mask.h  component_type.h  engine.h  engine_application.h  entity.h  entity_handle.h  file.h  matrix_3.h  matrix_4.h  metadata.h  module.h  module_container.h  prefab_factory.h  scene.h  system.h  system_container.h  system_manager.h  transform.h  vector.h
include/entity/: entity.h  entity_handle.h
include/graphics/: Mesh.h  buffer.h  camera.h  command_buffer.h  command_pool.h  descriptor.h  descriptor_handle.h  descriptor_set.h  filter_default.h  framebuffers.h  graphic_manager.h  image.h  image2d.h  image_2d.h  image_cube.h  image_depth.h  instance.h  logical_device.h  mesh_cube.h  mesh_manager.h  mesh_obj.h  mesh_plane.h  mesh_quad.h  mesh_sphere.h  mesh_vertex.h  model.h  model_cube.h  model_manager.h  model_obj.h  model_plane.h  model_sphere.h  model_vertex.h  physical_device.h  pipeline.h  pipeline_graphic.h  pipeline_material.h  pipeline_material_manager.h  post_filter.h  push_handle.h  render_manager.h  (+20 more)
include/graphics/buffers/: buffer.h  instance_buffer.h  push_handle.h  storage_buffer.h  storage_handle.h  uniform_buffer.h  uniform_handle.h
include/graphics/filters/: filter_fog.h  filter_fxaa.h  filter_ssao.h  filter_ssao_blur.h
include/graphics/gizmos/: gizmo.h  gizmo_manager.h  gizmo_type.h  renderer_gizmo.h
include/graphics/pipelines/: pipeline.h  pipeline_compute.h  pipeline_graphic.h  shader.h
include/physic/: bounding_sphere.h  physic_manager.h
include/system/: camera_view.h  frustum_culling.h  input_controller.h  system.h  system_manager.h
include/utility/: json_utility.h  stb_image.h  tiny_obj_loader.h
ressources/scenes/: newScene.scene
shaders/: Travail (F) - Raccourci.lnk  brdf.comp  compile.bat  default_metal_roughness.frag  deferred.frag  deferred.vert  filter_default.frag  filter_default.vert  filter_fog.frag  filter_fog.vert  filter_ssao.frag  filter_ssao.vert  filter_ssao_blur.frag  frag.spv  fxaa.frag  irradiance.comp  irridiance.comp  post_default.frag  post_default.vert  prefiltered.comp  shader.frag  shader.vert  shadow_directional.frag  shadow_directional.vert  skybox.frag  skybox.vert  terrain.frag  terrain.geom  terrain.tesc  terrain.tese  terrain.vert  vert.spv
src/: main.cpp
src/component/: camera.cpp  component.cpp  component_manager.cpp  component_mask.cpp  control_type.cpp  debug_info.cpp  drawable.cpp  light.cpp  material_default.cpp  mesh.cpp  mesh_renderer.cpp  model.cpp  transform.cpp
src/component/lights/: directional_light.cpp  light.cpp  point_light.cpp  spot_light.cpp
src/component/materials/: material_default.cpp  material_metal_roughness.cpp  material_skybox.cpp  material_terrain.cpp
src/component/shadows/: shadow_box.cpp  shadow_renderer.cpp
src/editor/: editor.cpp  editor_renderer.cpp  imgui.cpp  log.cpp  renderer_imgui.cpp
src/engine/: color.cpp  component.cpp  component_manager.cpp  component_mask.cpp  engine.cpp  engine_application.cpp  entity.cpp  entity_handle.cpp  file.cpp  input.cpp  matrix_3.cpp  matrix_4.cpp  module.cpp  module_container.cpp  prefab_factory.cpp  scene.cpp  system.cpp  system_container.cpp  system_manager.cpp  transform.cpp  vector.cpp
src/entity/: entity.cpp  entity_handle.cpp
src/graphics/: Mesh.cpp  buffer.cpp  camera.cpp  command_bufer.cpp  command_buffer.cpp  command_pool.cpp  descriptor_handle.cpp  descriptor_set.cpp  filter_default.cpp  framebuffers.cpp  graphic_manager.cpp  graphic_manager.cpp~RF6d349a.TMP  graphic_manager.cpp~RF7fb7afb.TMP  image.cpp  image2d.cpp  image_2d.cpp  image_cube.cpp  image_depth.cpp  instance.cpp  logical_device.cpp  mesh_cube.cpp  mesh_manager.cpp  mesh_obj.cpp  mesh_plane.cpp  mesh_quad.cpp  mesh_sphere.cpp  mesh_vertex.cpp  model.cpp  model_cube.cpp  model_manager.cpp  model_obj.cpp  model_plane.cpp  model_sphere.cpp  model_vertex.cpp  physical_device.cpp  pipeline_graphic.cpp  pipeline_material.cpp  pipeline_material_manager.cpp  post_filter.cpp  push_handle.cpp  (+19 more)
src/graphics/buffers/: buffer.cpp  instance_buffer.cpp  push_handle.cpp  storage_buffer.cpp  storage_handle.cpp  uniform_buffer.cpp  uniform_handle.cpp
src/graphics/filters/: filter_default.cpp  filter_fog.cpp  filter_fxaa.cpp  filter_ssao.cpp  filter_ssao_blur.cpp
src/graphics/gizmos/: gizmo.cpp  gizmo_manager.cpp  gizmo_type.cpp  renderer_gizmo.cpp
src/graphics/pipelines/: pipeline_compute.cpp  pipeline_graphic.cpp  shader.cpp
src/physic/: bounding_sphere.cpp  physic_manager.cpp
src/system/: camera_view.cpp  frustum_culling.cpp  input_controller.cpp  system.cpp  system_manager.cpp
src/utility/: json_utility.cpp
tests/: test_asset.cpp  test_entity.cpp  test_glfw.cpp  test_models.cpp
